cmd/pint/tests/0056_prometheus_required.txt
http response prometheus / 500 Offline
http start prometheus 127.0.0.1:7056

pint.ok -l debug --no-color lint rules
! stdout .
stderr 'level=ERROR msg="Query returned an error" err="server error: 500" uri=http://127.0.0.1:7056 query=count\(up\)'
stderr 'level=ERROR msg="Query returned an error" err="server error: 500" uri=http://127.0.0.1:7056 query=/api/v1/status/config'
stderr 'level=INFO msg="Problems found" Warning=[0-9]+'

-- rules/1.yaml --
- record: one
  expr: up == 0
  labels:
    path: a
- record: two
  expr: up == 0
  labels:
    path: a
-- rules/2.yaml --
- record: one
  expr: up == 0
  labels:
    path: b
- record: two
  expr: up == 0
  labels:
    path: b

-- .pint.hcl --
prometheus "prom" {
  uri      = "http://127.0.0.1:7056"
  required = false
}
parser {
  relaxed = [".*"]
}

rule{}
